--- a/src/App.css
+++ b/src/App.css
@@ -40,12 +40,16 @@ h3 {
 	color: #FFFFFF;
 }
 
+p {
+  font-size: 16px;
+}
+
 input {
 	width: 95%;
 	height: 52px;
 	border-radius: 4px;
 	padding-left: 12px;
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: normal;
 	border: 1px solid #949494;
 	transition: border-color 150ms ease-in-out 0s;
@@ -71,7 +75,7 @@ hr {
   z-index: 50;
   flex-direction: column;
   gap: 1rem;
-  top: 40%;
+  top: 300px;
 }
 
 .dot {
@@ -122,4 +126,19 @@ hr {
   to {
     transform: rotate(360deg);
   }
+}
+
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #d4d4d4;
+  border-radius: 8px;
+  border: 1px solid transparent;
 }
