--- a/src/assets/styles/footer.css
+++ b/src/assets/styles/footer.css
@@ -97,4 +97,18 @@ footer {
     }
 }
 
+footer h3 {
+    font-size:26px;
+}
 
+footer p {
+    font-size:16px;
+}
+
+footer span {
+    font-size:16px;
+}
+
+.footer-rights p {
+    font-size:18px;
+}
